# Taizhou

./: .gitignore  UPLOAD_MANIFEST.md
deployment_bundle/: README_DEPLOY.md
deployment_bundle/manifests/: rosbag_files_abs.txt  system_files.txt
deployment_bundle/scripts/: build_all.sh  install_apt_dependencies.sh  play_bag_170718_external_imu.sh  play_bag_172258_external_imu.sh  run_fastlio_external_imu_rviz.sh  save_pgo_map.sh  start_external_imu.sh  start_livox_mid360s.sh  start_usb_camera.sh
fast_livo2_ros2_ws/: .clangd  README.md
fast_livo2_ros2_ws/calibration/: PRINTING_README.md  debug_one_scene_board_roi.yaml  debug_one_scene_wide_roi.yaml  imu_static_analysis.yaml  li_init_lidar_imu_result_20260621.yaml  li_init_lidar_imu_result_20260622_150hz.yaml  lidar_background_no_box.npy  lidar_camera_planes.yaml  lidar_camera_planes_candidate.yaml  livox_mid360_sdk_quick_start_192_168_10_111.json  manual_lidar_camera_extrinsic.yaml  manual_lidar_imu_extrinsic.yaml  recommended_lidar_imu_extrinsic_20260622.yaml
fast_livo2_ros2_ws/calibration/camera_intrinsic/: README.md
fast_livo2_ros2_ws/scripts/: build_li_init_docker.sh  convert_ros2_bag_to_li_init_ros1.py  run_li_init_docker_shell.sh  run_li_init_on_bag_docker.sh
fast_livo2_ros2_ws/src/fast_livo2_ros2/: CMakeLists.txt  README.md  package.xml
fast_livo2_ros2_ws/src/fast_livo2_ros2/config/: apriltag_lidar_scenes.example.yaml  box_tagstandard41h12_id0.yaml  camera_pinhole_rgb.yaml  current_calibration_summary.yaml
fast_livo2_ros2_ws/src/fast_livo2_ros2/docs/: apriltag_intrinsic_validation.md  camera_intrinsic_calibration.md  data_recording.md  hwt601_485_imu_bringup.md  imu_calibration.md  li_init_workflow.md  lidar_camera_extrinsic_calibration.md  livox_mid360_bringup.md  system_integration.md
fast_livo2_ros2_ws/src/fast_livo2_ros2/launch/: hwt601_485_imu.launch.py  rviz_sensor_recording.launch.py
fast_livo2_ros2_ws/src/fast_livo2_ros2/rviz/: sensor_recording.rviz
fast_livo2_ros2_ws/src/fast_livo2_ros2/scripts/: analyze_imu_static.py  apriltag_lidar_extrinsic.py  benchmark_hwt601_poll_rate.py  calibrate_checkerboard_from_topic.py  calibrate_lidar_camera_planes.py  check_livox_mid360_link.sh  check_record_topics.py  fix_ros1_bag_type_names.py  hwt601_485_imu_node.py  probe_hwt601_485.py  record_camera_intrinsic_bag.sh  record_fast_livo_site_bag.sh  record_lidar_imu_init_bag.sh  record_livox_builtin_imu_bag.sh  record_validation_bag.sh  start_usb_camera.sh  validate_intrinsics_with_apriltag.py  visualize_lidar_camera_projection.py
fast_livo2_ros2_ws/src/livox_ros_driver2/: CMakeLists.txt
fast_livo2_validation_bags/01_raw_sensor_inputs/site_nav_20260624_170718_calibration_snapshot/: camera_pinhole_rgb_1280x720.yaml  recording_manifest.txt  recording_topics.yaml
fast_livo2_validation_bags/01_raw_sensor_inputs/site_nav_20260624_172258_calibration_snapshot/: camera_pinhole_rgb_640x480.yaml  mid360_rgb_apriltag.yaml  recording_manifest.txt
fastlio-ws/fastlio-ws (copy)/: bag_reco.sh  build.sh
fastlio-ws/fastlio-ws (copy)/corridor/: map.pcd  poses.txt
fastlio-ws/fastlio-ws (copy)/lab_full/: poses.txt
fastlio-ws/fastlio-ws (copy)/map_point_picker/: 2d_waypoints.yaml  corridor_2d_waypoints.yaml  (+4 more)
fastlio_ros2_ws/: README.md  README_DEPLOY.md
fastlio_ros2_ws/src/FASTLIO2_ROS2/chassis_can/: CMakeLists.txt  package.xml
fastlio_ros2_ws/src/FASTLIO2_ROS2/chassis_can/config/: chassis_can.yaml
fastlio_ros2_ws/src/FASTLIO2_ROS2/chassis_can/launch/: chassis_can.launch.py
fastlio_ros2_ws/src/FASTLIO2_ROS2/chassis_can/scripts/: can_protocol_probe.py  chassis_can_comm_node.py  setup_can.sh
offline_maps/external_imu_test_170718/: map.pcd  poses.txt
offline_maps/external_imu_test_172258/: map.pcd  poses.txt
offline_maps/external_imu_transition_test/: poses.txt
(+1482 files in other folders)
