<?xml version="1.0"?>
<package format="3">
  <name>fast_livo2_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble calibration and rosbag acquisition utilities for Livox Mid360, RGB camera, and external IMU validation data.</description>
  <maintainer email="user@example.com">FAST-LIVO2 ROS2 User</maintainer>
  <license>GPL-2.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
