<?xml version="1.0"?>
<package format="3">
  <name>chassis_can</name>
  <version>0.1.0</version>
  <description>SocketCAN chassis driver for the small car CAN protocol.</description>
  <maintainer email="user@example.com">FASTLIO2 ROS2 User</maintainer>
  <license>GPL-2.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
